--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
-  <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/vuetify/1.5.2/vuetify.css"
-      rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <style>
@@ -75,6 +72,7 @@
                     <v-checkbox
                       v-if="!todo.done"
                       v-model="todo.done"
+                      @change="completeTodo(todo.id)"
                       :dark="isDark"
                     ></v-checkbox>
                   </v-list-tile-action>
@@ -83,7 +81,8 @@
                       {{todo.title | capitalize}}
                     </v-list-tile-title>
                     <v-list-tile-sub-title>
-                      Добавлено в: {{todo.date | date}}
+                      Добавлено в: {{todo.createdAt | date(true)}} 
+                      (измененено {{todo.updatedAt | date(true)}})
                     </v-list-tile-sub-title>
                   </v-list-tile-content>
                   <v-btn icon ripple color="red" @click="removeTodo(todo.id)">
@@ -100,7 +99,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vuetify/1.5.2/vuetify.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
 <script src="/app.js"></script>
 </body>
 </html>
